# ufocloud

./: CMakeLists.txt  README.md
1stparty/: CMakeLists.txt
cmake/: Cloud-config.cmake.in  ufocloudConfig.cmake.in  ufopclConfig.cmake.in
include/ufo/cloud/: cloud.hpp  io.hpp  ply.hpp  point_cloud.hpp  ufo.hpp
include/ufo/pcl/: cloud.hpp  io.hpp  ply.hpp  point_cloud.hpp  ufo.hpp
tests/: CMakeLists.txt  cloud_test.cpp
